v4l2: init v4l2_buffer to 0x0 before ioctl

https://bugzilla.gnome.org/show_bug.cgi?id=712137